# malus

./: Cargo.toml  SCOPE.md  build.rs
examples/: hello.rs
src/: app.rs  events.rs  lib.rs  reconciler.rs  runtime.rs
src/appkit/: alert.rs  animation.rs  app.rs  appearance.rs  box_.rs  button.rs  collection_view.rs  color_panel.rs  color_well.rs  combo_box.rs  control.rs  cursor.rs  event.rs  font_panel.rs  image.rs  image_view.rs  layout.rs  menu.rs  mod.rs  notification.rs  open_panel.rs  outline_view.rs  pasteboard.rs  popup_button.rs  progress.rs  responder.rs  save_panel.rs  screen.rs  scroll_view.rs  search_field.rs  slider.rs  split_view.rs  split_view_controller.rs  stack_view.rs  stepper.rs  tab_view.rs  table_view.rs  text_field.rs  text_view.rs  toolbar.rs  (+6 more)
src/core_foundation/: array.rs  base.rs  boolean.rs  data.rs  dictionary.rs  mod.rs  number.rs  string.rs
src/core_graphics/: color.rs  color_space.rs  context.rs  data_provider.rs  display.rs  geometry.rs  gradient.rs  image.rs  mod.rs  path.rs
src/core_text/: font.rs  font_collection.rs  font_descriptor.rs  font_manager.rs  frame.rs  line.rs  mod.rs  paragraph.rs  run.rs  string_attributes.rs  types.rs
src/metal/: buffer.rs  command_buffer.rs  command_queue.rs  depth_stencil.rs  device.rs  encoder.rs  library.rs  mod.rs  pipeline.rs  render_pass.rs  sampler.rs  texture.rs  types.rs  vertex.rs
src/quartz_core/: animation.rs  display_link.rs  layer.rs  metal_layer.rs  mod.rs  transaction.rs  transform.rs
src/views/: button.rs  mod.rs  spacer.rs  (+3 more)
tests/: core_foundation.rs  core_graphics.rs
